project(iocpp)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(iocpp STATIC iocpp.h iocpp.cpp)

 if(IOCPP_ENABLE_TESTS)
 add_executable(iocpp_test tests/test.cpp )
 target_include_directories(iocpp_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(iocpp_test iocpp)
 endif()
